# algo-in-life-work-book

./: .gitignore  CITATION.cff  LICENSE  README.md  deep-research-report.md  pyproject.toml  requirements.txt
.codex/: config.toml
.codex/skills/: README.md
.github/: copilot-instructions.md
.github/agents/: chapter-workflow.agent.md  ci-diagnostics.agent.md  release-readiness.agent.md
.github/prompts/: new-chapter.prompt.md
.github/workflows/: ci.yml  deploy-pages.yml
book/: _config.yml  _toc.yml  footer.md  index.md  myst.yml  preface.md
book/shared-assets/: README.md
data/: README.md
data/raw/: ch02_sample.csv
docs/: AUTHOR_GUIDELINES.md
examples/: README.md  __init__.py
examples/ch01/: __init__.py  time_log.py
examples/ch02/: __init__.py  data_transform.py
examples/ch03/: __init__.py  sorting_search.py
publication/: ATTRIBUTION.md  README.md  RELEASE_CHECKLIST.md
scripts/: build_book.ps1  common.ps1  make_synthetic_data.py  preview_book.ps1  release_check.ps1
tests/: README.md  test_ch01_time_log.py  test_ch02_data_formats_and_tables.py  test_ch03_sorting_and_searching.py  test_ch04_hashing_and_dedup.py  test_ch05_graphs_and_routing.py  test_ch06_scheduling_and_allocation.py  test_ch07_budgeting_and_combinations.py  test_ch08_priority_queues_and_triage.py  test_ch09_sliding_windows_and_monitoring.py  test_ch10_interval_merging_and_capacity.py  test_ch11_dependency_ordering_and_workflows.py  test_ch12_matching_and_assignment.py
tools/happyebook-cli/: pyproject.toml
tools/happyebook-cli/src/happyebook/: __init__.py  cli.py
(+48 files in other folders)
