[project]
name = "algo-in-life-work-book"
version = "0.1.0"
description = "A project template for a practical algorithm book with executable examples and reproducible assets."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["algorithm", "book", "education", "python"]

dependencies = [
  "pandas>=2.0",
  "numpy>=2.0",
  "pyarrow>=12.0",
  "openpyxl>=3.1",
  "scikit-learn>=1.3",
  "statsmodels>=0.14.6",
  "networkx>=3.0",
  "matplotlib>=3.7",
  "jinja2>=3.1",
  "pytest>=8.0",
]

[project.optional-dependencies]
docs = [
  "jupyter-book>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
